fix alignment of header and nav

--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@
  
 body{
 font-family: 'Merriweather', serif;
+margin: 0;
 
 }
 .main-nav {
@@ -29,7 +30,6 @@ font-family: 'Merriweather', serif;
 .title-container{
     background-color: lightcyan;
     text-align: center;
-    margin: 10px;
     padding: 10px;
     font-family: 'Pacifico', cursive;
 }
